feat(backend): granular workflow edit validation with editability endpoint